<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.dei.perla</groupId>
  <artifactId>perla-core</artifactId>
  <version>1.0.0-SNAPSHOT</version>
  <name>perla-core</name>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>
  <dependencies>
  	<dependency>
  		<groupId>junit</groupId>
  		<artifactId>junit</artifactId>
  		<version>4.11</version>
  	</dependency>
  	<dependency>
  		<groupId>log4j</groupId>
  		<artifactId>log4j</artifactId>
  		<version>1.2.17</version>
  	</dependency>
  	<dependency>
  		<groupId>org.apache.httpcomponents</groupId>
  		<artifactId>httpclient</artifactId>
  		<version>4.3.3</version>
  	</dependency>
  	<dependency>
  		<groupId>com.sun.xml.bind</groupId>
  		<artifactId>jaxb-impl</artifactId>
  		<version>2.2.7</version>
  	</dependency>
  	<dependency>
  		<groupId>org.javassist</groupId>
  		<artifactId>javassist</artifactId>
  		<version>3.18.1-GA</version>
  	</dependency>
  	<dependency>
  		<groupId>org.codehaus.jackson</groupId>
  		<artifactId>jackson-mapper-asl</artifactId>
  		<version>1.9.13</version>
  	</dependency>
  	<dependency>
  		<groupId>commons-io</groupId>
  		<artifactId>commons-io</artifactId>
  		<version>2.4</version>
  		<scope>test</scope>
  	</dependency>
  	<dependency>
  		<groupId>org.hamcrest</groupId>
  		<artifactId>hamcrest-all</artifactId>
  		<version>1.3</version>
  	</dependency>
  	<dependency>
  		<groupId>org.glassfish.web</groupId>
  		<artifactId>el-impl</artifactId>
  		<version>2.2</version>
  		<scope>test</scope>
  	</dependency>
  	<dependency>
  		<groupId>javax.el</groupId>
  		<artifactId>el-api</artifactId>
  		<version>2.2</version>
  		<scope>provided</scope>
  	</dependency>
  </dependencies>
  <build>
    <resources>
      <resource>
        <directory>src/main/java</directory>
        <includes>
          <include>**/jaxb.index</include>
        </includes>
      </resource>
			<resource>
				<directory>src/test/java</directory>
				<includes>
					<include>**/jaxb.index</include>
				</includes>
			</resource>
      <resource>
        <directory>src/main/resources</directory>
      </resource>
    </resources>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.1</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
          <testSource>1.8</testSource>
          <testTarget>1.8</testTarget>
        </configuration>
      </plugin>
      <plugin>
 		<groupId>org.apache.maven.plugins</groupId>
 		<artifactId>maven-eclipse-plugin</artifactId>
 		<version>2.9</version>
	  </plugin>
    </plugins>
  </build>
</project>
